--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -74,15 +74,24 @@ stages:
             echo "Scanning image for HIGH/CRITICAL vulnerabilities..."
             trivy image --no-progress --exit-code 0 --severity HIGH,CRITICAL $(dockerRepository):latest
           displayName: 'Scan Docker Image with Trivy'
-# Optional kubernetes deployment to azure
-        # - task: KubernetesManifest@1
-        #   inputs:
-        #     action: deploy
-        #     kubernetesServiceConnection: 'conexion'
-        #     namespace: 'default'
-        #     manifests: |
-        #       k8s/deployment.yaml
-        #       k8s/service.yaml
-        #       k8s/hpa.yaml
-        #     containers: |
-        #       diegosva/devsu-node-app:latest
+- stage: Deploy
+  displayName: 'Deploy to AKS'
+  dependsOn: Docker
+  jobs:
+    - job: Deploy
+      steps:
+        - task: Kubernetes@1
+          displayName: 'Deploy Manifests to AKS'
+          inputs:
+            connectionType: 'Azure Resource Manager'
+            azureSubscription: 'SUBSCRIPTION_CONN_NAME'
+            azureResourceGroup: 'rg-devsu-devops'
+            kubernetesCluster: 'aks-devsu'
+            namespace: 'default'
+            command: apply
+            useConfigurationFile: true
+            configuration: |
+              k8s/deployment.yaml
+              k8s/service.yaml
+              k8s/hpa.yaml
+              k8s/ingress.yaml
