--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -84,7 +84,7 @@ stages:
           displayName: 'Deploy Manifests to AKS'
           inputs:
             connectionType: 'Azure Resource Manager'
-            azureSubscription: 'devsu-sp'
+            azureSubscriptionEndpoint: 'devsu-sp'
             azureResourceGroup: 'rg-devsu-devops'
             kubernetesCluster: 'aks-devsu'
             namespace: 'default'
